Bug 260734 - Ark crash when I close it.
Summary: Ark crash when I close it.
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
: 292235 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-19 21:12 UTC by David Nussio
Modified: 2012-01-24 07:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Nussio 2010-12-19 21:12:56 UTC
Application: ark (2.15)
KDE Platform Version: 4.5.4 (KDE 4.5.4)
Qt Version: 4.7.1
Operating System: Linux 2.6.35.9-64.fc14.i686 i686
Distribution: "Fedora release 14 (Laughlin)"

-- Information about the crash:
- What I was doing when the application crashed:
I open a zip file, I read html document into preview window and then I close preview and ark windows.

The crash can be reproduced every time.

-- Backtrace:
Application: Ark (ark), signal: Segmentation fault
[Current thread is 1 (Thread 0xb774a780 (LWP 12618))]

Thread 2 (Thread 0xb5264b70 (LWP 12636)):
#0  0x00252416 in __kernel_vsyscall ()
#1  0x00a5a98b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0x05361057 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#3  0x00a55f19 in start_thread () from /lib/libpthread.so.0
#4  0x0098fc4e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb774a780 (LWP 12618)):
[KCrash Handler]
#7  operator-> (this=0x10) at ../../src/corelib/tools/qscopedpointer.h:113
#8  QHostAddress::isNull (this=0x10) at kernel/qhostaddress.cpp:858
#9  0x07121654 in WebSslInfo::isValid (this=0x87d5270) at /usr/src/debug/kwebkitpart-0.9.6/src/websslinfo.cpp:65
#10 0x0710fe75 in KWebKitPartPrivate::slotSaveFrameState (this=0x879acf8, frame=0x87d37b8, item=0xbf94e0ac) at /usr/src/debug/kwebkitpart-0.9.6/src/kwebkitpart_p.cpp:343
#11 0x07113d88 in KWebKitPartPrivate::qt_metacall (this=0x879acf8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbf94e074) at /usr/src/debug/kwebkitpart-0.9.6/i686-redhat-linux-gnu/src/kwebkitpart_p.moc:112
#12 0x004d6b6b in QMetaObject::metacall (object=0x879acf8, cl=QMetaObject::InvokeMetaMethod, idx=12, argv=0xbf94e074) at kernel/qmetaobject.cpp:237
#13 0x004e6047 in QMetaObject::activate (sender=0x87a1d98, m=0x58d0e64, local_signal_index=21, argv=0xbf94e074) at kernel/qobject.cpp:3272
#14 0x0509654a in QWebPage::saveFrameStateRequested(QWebFrame*, QWebHistoryItem*) () from /usr/lib/libQtWebKit.so.4
#15 0x0507a237 in WebCore::FrameLoaderClientQt::saveViewStateToItem(WebCore::HistoryItem*) () from /usr/lib/libQtWebKit.so.4
#16 0x04e5e94e in WebCore::HistoryController::saveScrollPositionAndViewStateToItem(WebCore::HistoryItem*) () from /usr/lib/libQtWebKit.so.4
#17 0x04e502b5 in WebCore::FrameLoader::detachFromParent() () from /usr/lib/libQtWebKit.so.4
#18 0x0509cd34 in QWebPage::~QWebPage() () from /usr/lib/libQtWebKit.so.4
#19 0x031a5978 in KWebPage::~KWebPage (this=0x87a1d98, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdewebkit/kwebpage.cpp:171
#20 0x0711e081 in WebPage::~WebPage (this=0x87a1d98, __in_chrg=<value optimized out>) at /usr/src/debug/kwebkitpart-0.9.6/src/webpage.cpp:222
#21 0x0711e0b3 in WebPage::~WebPage (this=0x87a1d98, __in_chrg=<value optimized out>) at /usr/src/debug/kwebkitpart-0.9.6/src/webpage.cpp:225
#22 0x050a1378 in QWebView::~QWebView() () from /usr/lib/libQtWebKit.so.4
#23 0x031a8b33 in KWebView::~KWebView (this=0x87a1d70, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdewebkit/kwebview.cpp:41
#24 0x071174e1 in WebView::~WebView (this=0x87a1d70, __in_chrg=<value optimized out>) at /usr/src/debug/kwebkitpart-0.9.6/src/webview.cpp:75
#25 0x07117523 in WebView::~WebView (this=0x87a1d70, __in_chrg=<value optimized out>) at /usr/src/debug/kwebkitpart-0.9.6/src/webview.cpp:78
#26 0x004e42d8 in QObjectPrivate::deleteChildren (this=0x87a14e0) at kernel/qobject.cpp:1949
#27 0x075c4679 in QWidget::~QWidget (this=0x87a0398, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1600
#28 0x075c4963 in QWidget::~QWidget (this=0x87a0398, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1620
#29 0x004e42d8 in QObjectPrivate::deleteChildren (this=0x878cf50) at kernel/qobject.cpp:1949
#30 0x075c4679 in QWidget::~QWidget (this=0x8785f18, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1600
#31 0x079c68e2 in QFrame::~QFrame (this=0x8785f18, __in_chrg=<value optimized out>) at widgets/qframe.cpp:240
#32 0x0294ace2 in KHBox::~KHBox (this=0x8785f18, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdeui/widgets/khbox.cpp:49
#33 0x0299c4a2 in KVBox::~KVBox (this=0x8785f18, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdeui/widgets/kvbox.cpp:27
#34 0x0299c4e3 in KVBox::~KVBox (this=0x8785f18, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdeui/widgets/kvbox.cpp:29
#35 0x004e42d8 in QObjectPrivate::deleteChildren (this=0x8797ac0) at kernel/qobject.cpp:1949
#36 0x075c4679 in QWidget::~QWidget (this=0x878df38, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1600
#37 0x07a9c105 in QDialog::~QDialog (this=0x878df38, __in_chrg=<value optimized out>) at dialogs/qdialog.cpp:318
#38 0x027d52e5 in KDialog::~KDialog (this=0x878df38, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kdeui/dialogs/kdialog.cpp:192
#39 0x06dc4e6f in ArkViewer::~ArkViewer (this=0x878df38, __in_chrg=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/part/arkviewer.cpp:55
#40 0x06dc4eb3 in ArkViewer::~ArkViewer (this=0x878df38, __in_chrg=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/part/arkviewer.cpp:57
#41 0x004e42d8 in QObjectPrivate::deleteChildren (this=0x868ca48) at kernel/qobject.cpp:1949
#42 0x075c4679 in QWidget::~QWidget (this=0x8688560, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1600
#43 0x079c68e2 in QFrame::~QFrame (this=0x8688560, __in_chrg=<value optimized out>) at widgets/qframe.cpp:240
#44 0x07a2a703 in QSplitter::~QSplitter (this=0x8688560, __in_chrg=<value optimized out>) at widgets/qsplitter.cpp:1050
#45 0x07a2a763 in QSplitter::~QSplitter (this=0x8688560, __in_chrg=<value optimized out>) at widgets/qsplitter.cpp:1056
#46 0x03437114 in KParts::Part::~Part (this=0x85af470, __vtt_parm=0x6dd922c, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kparts/part.cpp:208
#47 0x034384ab in KParts::ReadOnlyPart::~ReadOnlyPart (this=0x85af470, __vtt_parm=0x6dd9228, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kparts/part.cpp:456
#48 0x034385f0 in KParts::ReadWritePart::~ReadWritePart (this=0x85af470, __vtt_parm=0x6dd9224, __in_chrg=<value optimized out>) at /usr/src/debug/kdelibs-4.5.4/kparts/part.cpp:715
#49 0x06db7ba3 in Ark::Part::~Part (this=0x85af470, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/part/part.cpp:129
#50 0x06db7c23 in Ark::Part::~Part (this=0x85af470, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/part/part.cpp:135
#51 0x08054804 in MainWindow::~MainWindow (this=0x853d270, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/app/mainwindow.cpp:74
#52 0x080548e3 in MainWindow::~MainWindow (this=0x853d270, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at /usr/src/debug/kdeutils-4.5.4/ark/app/mainwindow.cpp:76
#53 0x004e32d6 in qDeleteInEventHandler (o=0x853d270) at kernel/qobject.cpp:3980
#54 0x004e5b80 in QObject::event (this=0x853d270, e=0x85adb48) at kernel/qobject.cpp:1194
#55 0x075c9283 in QWidget::event (this=0x853d270, event=0x85adb48) at kernel/qwidget.cpp:8659
#56 0x079e4517 in QMainWindow::event (this=0x853d270, event=0x85adb48) at widgets/qmainwindow.cpp:1478
#57 0x029635a4 in KMainWindow::event (this=0x853d270, ev=0x85adb48) at /usr/src/debug/kdelibs-4.5.4/kdeui/widgets/kmainwindow.cpp:1100
#58 0x029a1f90 in KXmlGuiWindow::event (this=0x853d270, ev=0x85adb48) at /usr/src/debug/kdelibs-4.5.4/kdeui/xmlgui/kxmlguiwindow.cpp:132
#59 0x0757026c in QApplicationPrivate::notify_helper (this=0x84c6240, receiver=0x853d270, e=0x85adb48) at kernel/qapplication.cpp:4445
#60 0x07574f7f in QApplication::notify (this=0xbf94f37c, receiver=0x853d270, e=0x85adb48) at kernel/qapplication.cpp:4410
#61 0x02879f7b in KApplication::notify (this=0xbf94f37c, receiver=0x853d270, event=0x85adb48) at /usr/src/debug/kdelibs-4.5.4/kdeui/kernel/kapplication.cpp:310
#62 0x004d0333 in QCoreApplication::notifyInternal (this=0xbf94f37c, receiver=0x853d270, event=0x85adb48) at kernel/qcoreapplication.cpp:732
#63 0x004d4085 in sendEvent (receiver=0x0, event_type=0, data=0x84b08e8) at kernel/qcoreapplication.h:215
#64 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x84b08e8) at kernel/qcoreapplication.cpp:1373
#65 0x004d425e in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#66 0x004fdeb5 in sendPostedEvents (s=0x84c8710) at kernel/qcoreapplication.h:220
#67 postEventSourceDispatch (s=0x84c8710) at kernel/qeventdispatcher_glib.cpp:277
#68 0x00141192 in g_main_dispatch (context=0x84c8690) at gmain.c:2149
#69 g_main_context_dispatch (context=0x84c8690) at gmain.c:2702
#70 0x00141978 in g_main_context_iterate (context=0x84c8690, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#71 0x00141c35 in g_main_context_iteration (context=0x84c8690, may_block=1) at gmain.c:2843
#72 0x004fe02d in QEventDispatcherGlib::processEvents (this=0x84b0398, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#73 0x07623406 in QGuiEventDispatcherGlib::processEvents (this=0x84b0398, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#74 0x004cf4ca in QEventLoop::processEvents (this=0xbf94f284, flags=...) at kernel/qeventloop.cpp:149
#75 0x004cf77a in QEventLoop::exec (this=0xbf94f284, flags=...) at kernel/qeventloop.cpp:201
#76 0x004d4327 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#77 0x0756e078 in QApplication::exec () at kernel/qapplication.cpp:3719
#78 0x08053b0b in main (argc=) at /usr/src/debug/kdeutils-4.5.4/ark/app/main.cpp:209

Reported using DrKonqi
Comment 1 Dawit Alemayehu 2010-12-27 04:52:20 UTC
SVN commit 1209532 by adawit:

- Guard against possible access of already deleted d pointer...

BUG:260734


 M  +21 -10    websslinfo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1209532
Comment 2 Dawit Alemayehu 2012-01-24 07:20:53 UTC
*** Bug 292235 has been marked as a duplicate of this bug. ***