- Guard against possible access of already deleted d pointer...

BUG:260734